Fixed the three cards on the home screen on mobile.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -937,7 +937,7 @@ footer {
 
         .section-content-wrapper-rows {
 
-            #section-one-lower-wrapper {
+            .m-row-section-lower-wrapper {
                 display: flex;
                 flex-direction: column;
 
